# go-banking

./: .air.toml  .comet.json  .commitlinter.yml  .containerignore  .editorconfig  .gitignore  .golangci.yml  .mockery.yaml  .sqlfluff  Containerfile  Dockerfile  Taskfile.yml  buf.gen.yaml  buf.work.yaml  container-compose.yml  docker-compose.yml  entrypoint.sh  go.mod  go.sum  gowatch.yml  main.go  sqlc.yaml
.github/workflows/: ci.yml  deployment.yml  unit-tests.yml
api/: account.go  server.go
db/: simple-bank.sql
db/query/: accounts.sql  entries.sql  transfers.sql
db/sqlc/: account_test.go  entries_test.go  main_test.go  store.go  store_test.go  transfers_test.go
doc/: db.dbml
internal/api/: account.go  account_test.go  middleware.go  middleware_test.go  server.go  token.go  transfer.go  user.go  user_test.go  validator.go
internal/config/: app.go  db.go  options.go  postgres.go  redis.go
internal/db/: postgresqlerrors.go
internal/token/: errors.go  jwtmaker.go  jwtmaker_test.go  pasetomaker.go  pasetomaker_test.go  payload.go
internal/util/: currency.go  random.go
internal/valid/: validator.go
internal/worker/: distributor.go  logger.go  processor.go  sender.go
proto/: BUILD.bazel  buf.yaml  rpc_create_user.proto  rpc_login_user.proto  rpc_update_user.proto  service_simple_bank.proto  user.proto
proto/protoc-gen-openapiv2/options/: BUILD.bazel
proto/user/v1/: rpc_create_user.proto  rpc_login_user.proto  rpc_update_user.proto  user.proto  user_service.proto
scripts/: entrypoint.sh  run-app.sh
tasks/app/: App.yml  (+1 more)
util/: random.go
(+45 files in other folders)
