load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "pb_proto",
    srcs = [
        "rpc_create_user.proto",
        "rpc_login_user.proto",
        "rpc_update_user.proto",
        "service_simple_bank.proto",
        "user.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:root_proto",
        "//google/api:api_proto",
        "//protoc-gen-openapiv2/options:options_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "pb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/dharmavagabond/simple-bank/internal/pb",
    proto = ":pb_proto",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:rpc_create_user.proto",
        "//:rpc_login_user.proto",
        "//:rpc_update_user.proto",
        "//:user.proto",
        "//google/api:annotations_proto",
        "//protoc-gen-openapiv2/options:annotations_proto",
    ],
)

go_library(
    name = "pb",
    embed = [":pb_go_proto"],
    importpath = "github.com/dharmavagabond/simple-bank/internal/pb",
    visibility = ["//:__subpackages__"],
)
